# TYMovieEditor

./: CMakeLists.txt  Makefile  PlayerDemo.cpp  TYMovieEditor.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  movieplayer.cpp  movieplayer.h  movierender.cpp  movierender.h  readme.txt
include/libopenshot/: OpenShotVersion.h
include/libopenshot-audio/: JuceHeader.h
include/libopenshot-audio/juce_audio_devices/: juce_audio_devices.h
include/libopenshot-audio/juce_core/maths/: juce_MathsFunctions.h
include/libopenshot/Qt/: PlayerDemo.h
lib/Debug/: libopenshot.17.dylib  libopenshot.dylib
lib/Release/: libopenshot-audio.0.1.8.dylib  libopenshot-audio.dylib  libopenshot.17.dylib  libopenshot.dylib
libopenshot-mac-compile.txt/: TXT.rtf
others/: CMakeCache-mac.txt
